--- a/src/main/java/com/mycompany/javaassignment/Homepage.form
+++ b/src/main/java/com/mycompany/javaassignment/Homepage.form
@@ -214,7 +214,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\USER\Documents\NetBeansProjects\JavaAssignment\target\classes\com\mycompany\javaassignment\Seaview.jpg"/>
+              <Image iconType="3" name="/com/mycompany/javaassignment/Seaview.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel3"/>
           </Properties>
